--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,94 @@
-@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800');
+@font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 100;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.otf) format('opentype');} 
+@font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 300;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.otf) format('opentype');} 
+@font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 400;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.otf) format('opentype');} 
+@font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 500;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.otf) format('opentype');} 
+@font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 700;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.otf) format('opentype');} 
+@font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 900;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.otf) format('opentype');}
 
-body {
+html, body {
     margin: 0px;
-    margin-left: 20%;
-    margin-right: 20%;
-    background-color: white;
-    height: 100%;
+    padding: 0px;
+    font-family: 'Noto Sans KR', '맑은 고딕', 'Malgun Gothic', sans-serif;
     overflow: hidden;
-    font-family: 'Nanum Gothic';
-    font-size: 14px;
-    line-height: 1.6;
+    height: 100%;
+    animation: fadein 0.3s;
+    -moz-animation: fadein 0.3s; /* Firefox */
+    -webkit-animation: fadein 0.3s; /* Safari and Chrome */
+    -o-animation: fadein 0.3s; /* Opera */
+}
+
+input:focus {
+    outline:none;
+}
+
+#root, #wrap {
+    height: 100%;
+}
+
+.flex_container {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #header {
-    display: flex;
-    width: 100%;
+    DISPLAY: FLEX;
+    WIDTH: 100%;
+    MARGIN: 2.5% 10%;
+    COLOR: #303030;
 }
 
-#btns {
+#menu {
     display: flex;
     width: 100%;
-    margin-left: 200px;
-    margin-top: 150px;
+    margin: 106px 10% 0px;
 }
 
-#coraise {
+#googleBtn {
     position: absolute;
-    left: 50%;
-    transform: translate(-50%,0px);
+    margin-right: 10%;
+    margin-top: 24px;
+    right: 0;
+}
+
+#googleBtn button {
+    border-style: none;
+    background-color: white;
+    text-decoration-line:underline;
+    text-underline-position: under;
+    text-decoration-thickness: 2px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+@keyframes fadein {
+    from {
+        opacity:0.5;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0.5;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0.5;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0.5;
+    }
+    to {
+        opacity: 1;
+    }
 }
